--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.html",
   "scripts": {
     "dev": "vercel dev",
-    "build": "echo 'No build step required'",
-    "start": "echo 'Static site - no start script needed'"
+    "build": "echo 'Static site - no build step required'",
+    "start": "echo 'Static site - served by Vercel'"
   },
   "dependencies": {
     "stripe": "^14.12.0"
